[project]
name = "chess-menu"
description = "Helps with tha chess peices"
license = "LICENSE"
dependencies = ["GitPython", "PyGithub", "matrix-client==0.4.0", "transformers", "huggingface-hub>0.20", "typer", "rich", "typing-extensions"]

[project.urls]
Repository = "https://github.com/owenreilly/test.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "owenreilly"
DisplayName = "Chess-Manager"
Icon = ""
